<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_trajectory</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zspdeutschland@gmail.com">zsp</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>traj_interfaces</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tod_command_creation</depend>
  <!-- <depend>pure_pursuit</depend> -->
  <!-- <depend>tod_msgs</depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
