<?xml version="1.0"?>
<package format="3">
  <name>tod_input_devices</name>
  <version>0.1.0</version>
  <description>The tod_input_devices package</description>

  <maintainer email="hoffmann@ftm.mw.tum.de">Simon Hoffmann</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <depend>rclcpp</depend>
  <depend>tod_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>