<?xml version="1.0"?>
<package format="3">
    <name>tod_msgs</name>
    <version>1.0.0</version>
    <description>The tod_msgs package</description>

    <maintainer email="feiler@ftm.mw.tum.de">Johannes Feiler</maintainer>
    <maintainer email="hoffmann@ftm.mw.tum.de">Simon Hoffmann</maintainer>
    <maintainer email="majstorovic@ftm.mw.tum.de">Domagoj Majstorovic</maintainer>
    <maintainer email="andreas.schimpe@tum.de">Andreas Schimpe</maintainer>

    <license>LGPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
